# AutoTrader

./: .dockerignore  .env  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  foreign_stocks.md  main.py  pyproject.toml  pytest.ini  requirements.txt  test_main.http
api/: KISOpenApi.py  LocalStockApi.py  OverseasStockApi.py
app/: main.py
app/account/: account_crud.py  account_model.py  account_service.py  entity.py  repository.py  router.py  service.py
app/api/: KISOpenApi.py  LocalStockApi.py  OverseasStockApi.py  kis_open_api.py  local_stock_api.py  overseas_stock_api.py
app/auth/: auth_crud.py  auth_service.py  entity.py  repository.py  router.py  service.py
app/batch/: AutoSwingBatch.py  StockDataBatch.py  auto_swing_batch.py  stock_data_batch.py  tech_analysis.py
app/common/: __init__.py  (+7 more)
batch/: AutoSwingBatch.py
crud/: AccountCrud.py  Account_crud.py  AuthCrud.py  StockCrud.py  SwingCrud.py  UserCrud.py  User_crud.py  user_crud.py
depends/: Header.py
docs/: .bkit-memory.json  .pdca-status.json  INDEX.md
model/: AccountModel.py  JwtModel.py  RequestModel.py  SignupModel.py  TableCreate.py
module/: AESCrypto.py  Config.py  DBConnection.py  KisWebSocket.py  MarketPrice.py  RedisClient.py  RedisConnection.py  Schedules.py
queries/: ACCOUNT.py  KIS_LOCAL_STOCKS.py  USER.py
services/: AccountService.py  AuthService.py  JwtToken.py  StockService.py  SwingService.py  UserService.py  marketPrice.py  middleware.py
tests/: README.md  conftest.py  test_email.py
tmp/: 005930.csv  086520.csv  328130.csv  test_backtest.py
(+253 files in other folders)
